Opened 9 years ago
Closed 9 years ago
#10646 closed bug (fixed)
GIFTranslator crashes trying to view settings
Reported by: | jscipione | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Add-Ons/Translators/GIF | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
I experienced this bug in hrev46953 (before recent GIF translator fixes) and the latest nightly but NOT on R1/A4.1.
Steps to reproduce.
- Open a non-gif image in Wonderbrush.
- Export the file as a gif, Save
- Export as again, in the Save dialog click the Settings... button to open the GIF settings.
This should trigger the crash.
Opening the settings file the first time doesn't cause the crash.
Attachments (1)
Change History (2)
by , 9 years ago
Attachment: | WonderBrush-468-debug-06-03-2014-07-24-50.report added |
---|
Note:
See TracTickets
for help on using tickets.
Crash report from Wonderbrush