GIFTranslator: Increment settings refcount

So that the settings object won't be destroyed when released on the
the view destructor.

Fixes #10646